# rust-wp-cli-poster

./: .gitignore  Cargo.toml  README.md  config_example.toml
src/: main.rs
