[package]
name = "rust-wp-cli-poster"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "default-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
